More changes to initial page, fixing github bug

--- a/starter-template.less
+++ b/starter-template.less
@@ -22,7 +22,18 @@ body {
 	min-height: 30px;
 }
 
+.jumbotron h1{
+  font-family: 'Manuale'
+}
 
+
+.jumbotron p {
+  font-family: 'Montserrat'
+}
+
+.about p {
+  font-size: 20;
+}
 
 .navbar-default .navbar-nav>li> a {
   padding-top:5px !important; padding-bottom:0 !important;
