--- a/starter-template.less
+++ b/starter-template.less
@@ -31,8 +31,8 @@ body {
   font-family: 'Montserrat'
 }
 
-.about p {
-  font-size: 20;
+.about {
+  font-size: 20 !important;
 }
 
 .navbar-default .navbar-nav>li> a {
