--- a/starter-template.less
+++ b/starter-template.less
@@ -1,47 +1,101 @@
+@font-face {
+    font-family: "Bookman Regular";
+    src: url(./Bookman Regular.ttf) format("truetype");
+}
+
+.faded {
+    position: absolute;
+    opacity: 0;
+    transition: all 1s linear;
+}
+.faded.fade-in {
+    position: static;
+    opacity: 1;
+    display: block;
+}
+
+
 body {
   padding-top: 50px;
-  background: #80FFFF;
+  background: #ffe4c4;
+  width: 100%;
+  height: 100%;
 }
-.starter-template {
-  padding: 40px 15px;
-  text-align: center;
-}
+
 .navbar-toggle {
     width: 100%;
     float: none;
     margin-right: 0;
 }
 
+.logo-upperright {
+  font-family: 'Bookman Regular' !important;
+  font-weight: bold;
+  font-size: 27px !important;
+  color: #ffffff;
+}
+
+.logo-upperright:focus,
+.logo-upperright:hover,
+.logo-upperright:active {
+  text-decoration: none !important;
+  color: #ffffff !important;
+}
+
 .navbar-brand {
-    padding-top:5px !important; padding-bottom:0 !important;
-    height: 30px;
+    height: 20px;
 }
 
 .navbar {
-	background: #80FFFF;
+	background: #0066cc;
 	min-height: 30px;
+	padding: 5px 5px 5px 5px;
+}
+
+.container {
+  width: 100%;
+  text-align: center;
+}
+ 
+.jumbotron {
+  background: #ffe4c4;
+  padding-top: 11%;
+  width: 78%;
+  display: inline-block;
 }
 
 .jumbotron h1{
-  font-family: 'Manuale'
+  font-family: 'Bookman Regular';
+  font-weight: bold;
+  font-size: 85px;
 }
-
 
 .jumbotron p {
-  font-family: 'Montserrat'
+  font-family: 'Didact Gothic'
 }
 
-.about {
-  font-size: 20 !important;
+.contact {
+  font-family: 'Didact Gothic';
+  font-size: 20px !important;
+}
+
+.contact p {
+  padding-top: 10%;
+}
+
+.about p {
+  font-family: 'Questrial';
+  font-size: 20px !important;
 }
 
 .navbar-default .navbar-nav>li> a {
   padding-top:5px !important; padding-bottom:0 !important;
   height: 30px;
-  font-family: "Trebuchet MS", Helvetica, sans-serif;
-  font-size: 20px;
+  font-family: "Didact Gothic", Helvetica, sans-serif;
+  font-size: 22px;
 	color: #ffffff;
-	background: #80FFFF;
+	background: #0066cc;
+	line-height: 20px;
 }
 
 .navbar-default .navbar-nav>.active> a,
@@ -49,9 +103,11 @@ body {
 .navbar-default .navbar-nav>.active> a:hover,
 .navbar-default .navbar-nav>li> a:hover,
 .navbar-default .navbar-nav>li> a:focus, {
-	text-decoration: underline;
-	color: #ffffff;
-	background: #80FFFF;
+  text-decoration: underline;
+	color: #eeeeee;
+	font-size: 22px;
+	background: #0066cc;
 
 }
+
 
